--- a/AviraProject/Base.lproj/Main.storyboard
+++ b/AviraProject/Base.lproj/Main.storyboard
@@ -193,10 +193,10 @@
             </objects>
             <point key="canvasLocation" x="-810" y="115"/>
         </scene>
-        <!--View Controller-->
+        <!--Title-->
         <scene sceneID="TAb-AE-7Is">
             <objects>
-                <viewController id="TJE-iK-mbN" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="StoryWebviewController" id="TJE-iK-mbN" customClass="StoryWebviewController" customModule="AviraProject" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Td6-d6-NsT"/>
                         <viewControllerLayoutGuide type="bottom" id="uAG-AA-9ZE"/>
@@ -206,7 +206,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mao-sc-cni">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZBu-F6-21J">
                                         <rect key="frame" x="8" y="8" width="359" height="29"/>
@@ -227,7 +227,7 @@
                                         </constraints>
                                     </view>
                                     <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ePP-zk-aGj">
-                                        <rect key="frame" x="0.0" y="45" width="375" height="602"/>
+                                        <rect key="frame" x="0.0" y="45" width="375" height="558"/>
                                         <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </webView>
                                 </subviews>
@@ -251,6 +251,19 @@
                             <constraint firstItem="uAG-AA-9ZE" firstAttribute="top" secondItem="Mao-sc-cni" secondAttribute="bottom" id="yKb-fZ-rQK"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Title" id="viH-PR-teD">
+                        <barButtonItem key="rightBarButtonItem" systemItem="action" id="PXL-pd-FM8">
+                            <connections>
+                                <action selector="saveToReadLater:" destination="TJE-iK-mbN" id="jjP-Sh-XnE"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="btnSaveToReadLater" destination="PXL-pd-FM8" id="x45-Hi-bod"/>
+                        <outlet property="lbURL" destination="uzj-C2-74W" id="Wjb-nx-jC8"/>
+                        <outlet property="webView" destination="ePP-zk-aGj" id="UaZ-6C-vT6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Nfo-Hb-3SP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
