--- a/AviraProject/Base.lproj/Main.storyboard
+++ b/AviraProject/Base.lproj/Main.storyboard
@@ -62,7 +62,7 @@
                                                                         <constraint firstAttribute="width" constant="50" id="T4c-Rf-29f"/>
                                                                     </constraints>
                                                                 </imageView>
-                                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ikt-ak-LrK">
+                                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ikt-ak-LrK">
                                                                     <rect key="frame" x="337" y="8" width="30" height="30"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="height" constant="30" id="dnI-hi-T3I"/>
@@ -323,7 +323,7 @@
                                                                 <constraint firstAttribute="height" constant="50" id="w0c-IS-kya"/>
                                                             </constraints>
                                                         </imageView>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yDx-0c-Qdj">
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yDx-0c-Qdj">
                                                             <rect key="frame" x="337" y="8" width="30" height="30"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="30" id="X9i-Zz-CVA"/>
