--- a/AviraProject/Base.lproj/Main.storyboard
+++ b/AviraProject/Base.lproj/Main.storyboard
@@ -39,13 +39,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vfq-SB-6OF">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5CK-Vj-pIb">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="553"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="617"/>
                                         <subviews>
                                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="135" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ybs-PZ-QXt">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="553"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="617"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <prototypes>
                                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="Kjv-rq-NvW" customClass="StoryDetailCell" customModule="AviraProject" customModuleProvider="target">
@@ -120,7 +120,7 @@
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
                                                                     </subviews>
-                                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                                     <constraints>
                                                                         <constraint firstItem="gSK-1M-35A" firstAttribute="centerY" secondItem="0gl-Qw-aTP" secondAttribute="centerY" id="0hp-ok-D5n"/>
                                                                         <constraint firstAttribute="trailing" secondItem="gSK-1M-35A" secondAttribute="trailing" constant="8" id="1gJ-jZ-0lP"/>
@@ -157,7 +157,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ja6-hn-HdI">
-                                        <rect key="frame" x="0.0" y="553" width="375" height="50"/>
+                                        <rect key="frame" x="0.0" y="617" width="375" height="50"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="b5v-yg-HAw">
                                                 <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
@@ -199,8 +199,8 @@
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="vfq-SB-6OF" secondAttribute="trailing" id="Fyc-su-QsD"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="vfq-SB-6OF" secondAttribute="bottom" id="JDa-8c-GiM"/>
-                            <constraint firstItem="vfq-SB-6OF" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="SSN-si-T1O"/>
                             <constraint firstItem="vfq-SB-6OF" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="hV6-5z-C3H"/>
+                            <constraint firstItem="vfq-SB-6OF" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="ueK-AR-yeK"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="vkN-P5-Nzw"/>
@@ -303,10 +303,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yaE-w5-3Fo">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="135" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="B4X-hg-Zko">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <prototypes>
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="Y0w-Gp-cko" customClass="StoryDetailCell" customModule="AviraProject" customModuleProvider="target">
@@ -383,9 +383,9 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="yaE-w5-3Fo" firstAttribute="leading" secondItem="7hc-vx-Eve" secondAttribute="leading" id="81Q-aE-Ol4"/>
+                            <constraint firstItem="yaE-w5-3Fo" firstAttribute="top" secondItem="7hc-vx-Eve" secondAttribute="top" id="HZY-zJ-Xkk"/>
                             <constraint firstItem="Gp0-oE-Jm7" firstAttribute="top" secondItem="yaE-w5-3Fo" secondAttribute="bottom" id="Rnt-PH-ETV"/>
                             <constraint firstAttribute="trailing" secondItem="yaE-w5-3Fo" secondAttribute="trailing" id="r2x-nL-U4c"/>
-                            <constraint firstItem="yaE-w5-3Fo" firstAttribute="top" secondItem="BnQ-FZ-TZx" secondAttribute="bottom" id="rH5-JN-1rR"/>
                         </constraints>
                     </view>
                     <connections>
